--- a/pom.xml
+++ b/pom.xml
@@ -10,12 +10,19 @@
   <version>1.0-SNAPSHOT</version>
   <modules>
     <module>wj-cloud-eureka-server</module>
+    <module>wj-cloud-config</module>
   </modules>
 
   <name>wj-cloud</name>
 
 
   <dependencies>
+<!--spring boot 注解-->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-autoconfigure</artifactId>
+      <version>2.2.6.RELEASE</version>
+    </dependency>
 
   </dependencies>
 </project>
