--- a/wj-cloud-config/pom.xml
+++ b/wj-cloud-config/pom.xml
@@ -5,10 +5,9 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.wj</groupId>
-  <artifactId>wj-cloud-eureka-server</artifactId>
+  <artifactId>wj-cloud-config</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <name>wj-cloud-eureka-server</name>
-  <packaging>jar</packaging>
+  <name>wj-cloud-config</name>
 
   <parent>
     <artifactId>wj-cloud</artifactId>
@@ -17,13 +16,7 @@
   </parent>
 
   <dependencies>
-    <dependency>
-      <groupId>org.springframework.cloud</groupId>
-      <artifactId>spring-cloud-starter-eureka-server</artifactId>
-      <version>1.4.7.RELEASE</version>
-    </dependency>
 
   </dependencies>
-
 
 </project>
