--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <packaging>jar</packaging>
     <name>wj-cloud-1</name>
 
+    <!--Spring boot-->
     <parent>
         <artifactId>spring-boot-starter-parent</artifactId>
         <groupId>org.springframework.boot</groupId>
